2022-12-11T01:45:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3666863642 # 692
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 413 655 / 420 669
* notice: next accum: outdated-unq outdated-all / unq all: 414 657 / 420 669
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-26] / []

2022-12-10T16:25:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3664998851 # 691
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 413 655 / 419 668
* notice: next accum: outdated-unq outdated-all / unq all: 413 655 / 420 669
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-12-10]

2022-12-10T08:23:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3663392249 # 690
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 413 655 / 419 668
* notice: next accum: outdated-unq outdated-all / unq all: 413 655 / 419 668
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-26]

2022-12-10T01:34:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3662046339 # 689
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 412 653 / 419 666
* notice: next accum: outdated-unq outdated-all / unq all: 413 655 / 419 668
* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2022-11-25] / [2022-12-09]

2022-12-09T16:27:02Z: