@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-12-11T01:45:51Z",
+  "timestamp" : "2022-12-11T08:23:11Z",
   "count_outdated" : 657,
   "uniques_outdated" : 414,
-  "count" : 669,
-  "uniques" : 420,
+  "count" : 670,
+  "uniques" : 421,
   "clones" : [
     {
       "timestamp": "2022-12-07T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-12-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-12-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
