@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 3,
   "clones": [
     {
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-12-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
