@@ -1,3 +1,11 @@
+2022-12-11T08:23:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3668122371 # 693
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 414 657 / 420 669
+* notice: next accum: outdated-unq outdated-all / unq all: 414 657 / 421 670
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-12-11]
+
 2022-12-11T01:45:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3666863642 # 692
 * notice: last 14d: unq all: 3 12
